# rphotos

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  admin.js  photos.scss  rustfmt.toml  ux.js
.github/workflows/: ci.yml
db/: 00001_init.sql  00002_person.sql
migrations/20160603223947_create_photos_table/: down.sql  up.sql
migrations/20160629225803_create_tags_tables/: down.sql  up.sql
migrations/20160630103050_create_people_tables/: down.sql  up.sql
migrations/20160630121524_create_places_tables/: down.sql  up.sql
migrations/20160701185424_create_users_table/: up.sql
migrations/20160708213522_create_positions_table/: down.sql  up.sql
migrations/20160807210343_add_public_flag/: down.sql  up.sql
migrations/20160808022325_create_cameras_table/: down.sql  up.sql
migrations/2017-11-23-123432_places_osm/: down.sql  up.sql
migrations/20170211160918_attributions/: down.sql  up.sql
migrations/2018-03-03-142213_photo_size/: down.sql  up.sql
migrations/2018-07-15-173144_unique_positions/: down.sql  up.sql
migrations/2018-09-05-065252_places_osm/: down.sql  up.sql
migrations/2019-05-18-170654_require-image-size/: down.sql  up.sql
migrations/2022-04-29-203357_datefuncs/: down.sql  up.sql
migrations/2023-02-26-185729_drop-extra-ids/: down.sql  up.sql
res/: admin.js  photos.scss  ux.js
src/: build.rs  dbopt.rs  env.rs  fetch_places.rs  findphotos.rs  lib.in.rs  lib.rs  listyears.rs  main.rs  memcachemiddleware.rs  models.rs  myexif.rs  nickel_diesel.rs  nickelext.rs  photosdir.rs  photosdirmiddleware.rs  pidfiles.rs  public_from_list.rs  readkpa.rs  requestloggermiddleware.rs  rphotosadm.rs  rustormmiddleware.rs  sassify.rs  schema.rs  setpassword.rs  views_by_date.rs
src/adm/: findphotos.rs  makepublic.rs  mod.rs  precache.rs  readkpa.rs  result.rs  stats.rs  storestatics.rs  users.rs
src/server/: admin.rs  api.rs  autocomplete.rs  context.rs  error.rs  image.rs  login.rs  mod.rs  nickelext.rs  photolink.rs  render_ructe.rs  search.rs  splitlist.rs  urlstring.rs  views_by_category.rs  views_by_date.rs
static/static/: photos.css
templates/: base.rs.html  data_positions.rs.html  details.rs.html  details.tpl  error.rs.html  groups.rs.html  groups.tpl  head.rs.html  head.tpl  img_link.rs.html  index.rs.html  index.tpl  login.rs.html  login.tpl  not_found.rs.html  page_base.rs.html  people.rs.html  people.tpl  person.rs.html  person.tpl  photo_link.rs.html  place.rs.html  place.tpl  places.rs.html  places.tpl  search.rs.html  tag.rs.html  tag.tpl  tags.rs.html  tags.tpl
