[package]
name = "rphotos"
version = "0.12.3-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2021"
msrv = "1.80"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.17.2", features = ["sass", "warp03"] }

[dependencies]
async-trait = "0.1.64"
async-walkdir = "0.2.0"
brotli = "3.3.0"
chrono = "0.4.19" # Must match version used by diesel
clap = { version = "4.0.18", features = ["derive", "wrap_help", "env"] }
diesel-async = { version = "0.3.0", features = ["deadpool", "postgres"] }
dotenv = "0.15"
flate2 = "1.0.14"
futures-lite = "1.12.0"
image = "0.24.0"
kamadak-exif = "0.5.0"
libc = "0.2.68"
medallion = "2.3.1"
mime = "0.3.0"
r2d2-memcache = "0.6"
rand = "0.8"
regex = "1.10.5"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

[dependencies.djangohashers]
default-features = false
features = ["with_pbkdf2"]
version = "1.1.1"

[dependencies.diesel]
default-features = false
features = ["chrono", "postgres"]
version = "2.1.0"

[dependencies.warp]
default-features = false
version = "0.3.0"

[dev-dependencies]
serde_urlencoded = "0.7.1" # Same as warp depends on
